--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 ### Python template
 # Byte-compiled / optimized / DLL files
+.idea/
+.idea/*
+.idea
+__pycache__
 __pycache__/
 *.py[cod]
 *$py.class
